# PowerPlanner

./: .gitignore  Cargo.toml  PowerPlanAutoSwitcher.ps1  README.md
.github/workflows/: rust.yml
src/: app.rs  config.rs  db.rs  energy.rs  idle.rs  main.rs  monitor.rs  power.rs  relocate.rs  scheduler.rs  tray.rs  types.rs
src/ui/: dashboard.rs  design.rs  history.rs  mod.rs  power_usage.rs  settings.rs  watched.rs
