[package]
name = "powerplanner"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "powerplanner"
path = "src/main.rs"

[dependencies]
eframe = "0.28"
egui = "0.28"
tray-icon = "0.14"
sysinfo = "0.30"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = "0.4"
anyhow = "1"
log = "0.4"
fern = "0.6"
dirs = "5"
image = { version = "0.25", default-features = false, features = ["png"] }
rfd = "0.15"
egui_extras = "0.28"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Power",
    "Win32_System_SystemInformation",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }

[profile.release]
opt-level = 3
lto = true
strip = true
